[package]
name = "mine_server"
version = "0.1.0"
edition = "2021"

[dependencies.snarkvm-algorithms]
path = "../algorithms"
version = "0.7.5"
default-features = false

[dependencies.snarkvm-curves]
path = "../curves"
version = "0.7.5"
default-features = false

[dependencies.snarkvm-dpc]
path = "../dpc"
version = "0.7.5"
optional = true

[dependencies.snarkvm-fields]
path = "../fields"
version = "0.7.5"
default-features = false

[dependencies.snarkvm-gadgets]
path = "../gadgets"
version = "0.7.5"
default-features = false

[dependencies.snarkvm-marlin]
path = "../marlin"
version = "0.7.5"
default-features = false

[dependencies.snarkvm-parameters]
path = "../parameters"
version = "0.7.5"
default-features = false

[dependencies.snarkvm-polycommit]
path = "../polycommit"
version = "0.7.5"
default-features = false

[dependencies.snarkvm-profiler]
path = "../profiler"
version = "0.7.5"
default-features = false

[dependencies.snarkvm-r1cs]
path = "../r1cs"
version = "0.7.5"
default-features = false

[dependencies.snarkvm-utilities]
path = "../utilities"
version = "0.7.5"
default-features = false

[dependencies.anyhow]
version = "1.0.50"

[dependencies.base58]
version = "0.2"

[dependencies.bech32]
version = "0.8"

[dependencies.blake2]
version = "0.9"
default-features = false

[dependencies.chrono]
version = "0.4"
default-features = false
features = [ "clock", "serde" ]

[dependencies.derivative]
version = "2"

[dependencies.hex]
version = "0.4.3"

[dependencies.itertools]
version = "0.10.1"

[dependencies.once_cell]
version = "1.8.0"

[dependencies.rand]
version = "0.8"

[dependencies.rayon]
version = "1"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.serde_json]
version = "1.0"

[dependencies.thiserror]
version = "1.0"

[dependencies.crossbeam-utils]
version = "0.8.1"

[dependencies.crossbeam-channel]
version = "0.5.1"

[dependencies.num_cpus]
version = "1.0"

[dependencies.tokio]
version = "1"
features = [
    "io-util",
    "macros",
    "net",
    "rt-multi-thread",
    "signal",
    "sync",
    "time"
]

[dependencies.tokio-util]
version = "=0.6"
features = ["codec"]

[dependencies.tokio-stream]
version = "=0.1"

[dependencies.tracing-subscriber]
version = "0.3"
features = ["env-filter", "parking_lot"]

[dependencies.log]
version = "0.4"

[dependencies.crossterm]
version = "0.22"

[dependencies.futures]
version = "0.3"

[dev-dependencies.bincode]
version = "1.3"

[dev-dependencies.criterion]
version = "0.3.5"

[dev-dependencies.rand_chacha]
version = "0.3"

[features]
default = [
  "full",
  "snarkvm-algorithms/default",
  "snarkvm-curves/default",
  "snarkvm-dpc/default",
  "snarkvm-fields/default",
  "snarkvm-gadgets/default",
  "snarkvm-marlin/default",
  "snarkvm-parameters/default",
  "snarkvm-utilities/default"
]
wasm = [ "full", "snarkvm-algorithms/wasm", "snarkvm-gadgets/full", "snarkvm-marlin/wasm", "snarkvm-parameters/wasm" ]
full = [ "testnet1", "testnet2" ]
print-trace = [ "snarkvm-profiler/print-trace" ]
testnet1 = []
testnet2 = []
